tests/negative/test_decl_glob_cn_not_init.orb
let x:(i32 cn);

fnc main() () {};